feat: addded delete command

--- a/examples/simple_pod.yaml
+++ b/examples/simple_pod.yaml
@@ -20,4 +20,5 @@ spec:
 ## kubectl get pods : This will list the pods in the default namespace
 ## kubectl get pods/myapp -o wide : This will give more details of the pod myapp
 ## kubectl describe pods/myapp : This will give all details of the pos myapp
+## kubectl delete pods/myapp : This will delete the pod myapp
 
